# todo

./: .gitignore  Cargo.toml  README.md  flake.nix
nix/: package.nix
src/: main.rs
src/config/: mod.rs
src/handler/: add.rs  data.rs  init.rs  list.rs  mod.rs  new.rs  rm.rs  set.rs  watch.rs
src/helpers/: errors.rs  mod.rs  styles.rs
