[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
anstyle = "1.0.13"
#chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
clap_derive = "4.5.47"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.7"
xdg = "3.0.0"

[profile.release]
opt-level = 3
debug = false
lto = true
strip = true
